# simpleshop-mcp

./: .env.example  .gitignore  .mcp.json  .mise.toml  DESIGN.md  E2E.md  LICENSE  README.md  TOOLS.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/superpowers/specs/: 2026-05-15-test-login-tool-design.md
src/: client.py  models.py  normalization.py  reports.py  server.py  settings.py
tests/: __init__.py  fixtures.py  test_client.py  test_compatibility_contract.py  test_e2e_test_login.py  test_normalization.py  test_reports.py  test_schema_export.py  test_server_inputs.py  test_settings.py  test_test_login.py
