[project]
name = "simpleshop-mcp"
version = "0.3.2"
description = "Read-only SimpleShop MCP server for accounting agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastmcp[apps]==3.3.0",
    "httpx==0.28.1",
    "keyring>=25.0,<26",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
]

[project.scripts]
simpleshop-mcp = "server:main"

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "respx==0.23.1",
    "ruff==0.15.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "e2e: live smoke tests that hit the real SimpleShop API",
]
addopts = "-m 'not e2e'"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["B008"]
